Fixed location in map user marker icon on smaller devices

--- a/src/app/modules/registration/components/set-location-in-map/set-location-in-map.component.scss
+++ b/src/app/modules/registration/components/set-location-in-map/set-location-in-map.component.scss
@@ -110,10 +110,8 @@ app-map {
     -moz-box-shadow: 1px 1px 5px 0px black;
     box-shadow: 1px 1px 5px 0px black; 
     display: inline-block;
-    transform: translateY(-9px);
-    position: absolute;
-    left: 20px;
-    bottom: 1px;
+    transform: translateY(-9px) translateX(-2px);
+    margin-top: 10px;
 }
   
   .leaflet-usermarker:before {
